--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <title>Locktar</title>
 </head>
 <body>
+    <div class="page-load">
+        <p class="fontOver-b">LOADING...</p>
+        <div class="page-load__bg"></div>
+    </div>
     <canvas width="320" height="640" id="game"></canvas>
     <canvas style="border: 0px" width="320" height="100" id="score"></canvas>
    
