--- a/index.html
+++ b/index.html
@@ -459,8 +459,8 @@
                                                 
                                             </div>
                                             <div class="slider-s__controls">
-                                                <button class="prev-btn"><img src="/img/tabs/prev.png" alt=""></button>
-                                                <button class="next-btn"><img src="/img/tabs/next.png" alt=""></button>
+                                                <button class="prev-btn"><img src="img/tabs/prev.png" alt=""></button>
+                                                <button class="next-btn"><img src="img/tabs/next.png" alt=""></button>
                                             </div>    
                                        </div>
                                     </div>
@@ -491,8 +491,8 @@
                                                 
                                             </div>
                                             <div class="slider-s__controls">
-                                                <button class="prev-btn"><img src="/img/tabs/prev.png" alt=""></button>
-                                                <button class="next-btn"><img src="/img/tabs/next.png" alt=""></button>
+                                                <button class="prev-btn"><img src="img/tabs/prev.png" alt=""></button>
+                                                <button class="next-btn"><img src="img/tabs/next.png" alt=""></button>
                                             </div>    
                                        </div>
                                     </div>
@@ -708,8 +708,8 @@
                             <div class="slider-s__pagination">               
                             </div>
                             <div class="review__slidesr-cntrl slider-s__controls">
-                                <button class="prev-btn"><img src="/img/tabs/prev.png" alt=""></button>
-                                <button class="next-btn"><img src="/img/tabs/next.png" alt=""></button>
+                                <button class="prev-btn"><img src="img/tabs/prev.png" alt=""></button>
+                                <button class="next-btn"><img src="img/tabs/next.png" alt=""></button>
                             </div>
                         </div>
                     </div>
@@ -811,8 +811,8 @@
                                 <div class="slider-s__pagination">            
                                 </div>
                                 <div class="slider-s__controls">
-                                    <button class="prev-btn"><img src="/img/tabs/prev.png" alt=""></button>
-                                    <button class="next-btn"><img src="/img/tabs/next.png" alt=""></button>
+                                    <button class="prev-btn"><img src="img/tabs/prev.png" alt=""></button>
+                                    <button class="next-btn"><img src="img/tabs/next.png" alt=""></button>
                                 </div>      
                             </div>
                         </div>
